--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,85 @@ p, span, a {
 }
 
 
+.menu-cat {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 15.6%;
+    height: 60px;
+    background-color: none; 
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    z-index: 1000;
+    display: none;
+}
+
+.menu-toggle {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.bar {
+    width: 100%;
+    height: 3px;
+    background-color: rgb(255, 155, 6);
+    transition: 0.4s;
+}
+
+
+.menu {
+    position: fixed;
+    top: 60px;
+    left: -250px;
+    width: 250px;
+    height: calc(100% - 60px);
+    background-color: rgb(248, 81, 4); 
+    padding-top: 20px;
+    transition: 0.4s;
+    z-index: 999;
+}
+
+.menu.open {
+    left: 0;
+}
+
+.menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+.menu li {
+    padding: 15px;
+    border-bottom: 1px solid #f2f6f7;
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    transition: 0.3s;
+}
+
+.menu a:hover {
+    color: #08f7f7;
+}
+
+
+
 @media (max-width: 600px) {
+
+    .nav-mobile img {
+        display: none;
+    }
+
+    .menu-cat {
+        display: flex;
+    }
+
     .home {
         flex-wrap: wrap;
     }
@@ -312,6 +390,15 @@ p, span, a {
 
 
 @media (max-width: 1366px) {
+
+
+    .nav-mobile img {
+        display: none;
+    }
+
+    .menu-cat {
+        display: flex;
+    }
 
     .section-form {
         padding: 0;
